# nexus

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json
.parcel-cache/: 129606bca31932f3-AssetGraph-0  6f3dc00e87af6077-AssetGraph-0  7f973df67467291d-AssetGraph-0  888211266a00c3a4-BundleGraph-0  aa5a020530aa730f-AssetGraph-0  e63e54d7f12969ab-AssetGraph-0  lock.mdb  requestGraph-0d98b4f077478651-0  requestGraph-3a539945636ae082-0  requestGraph-62d8ce657455c83a-0  requestGraph-bda6a020f8478c0c-0  requestGraph-nodes-0-0d98b4f077478651-0  requestGraph-nodes-0-3a539945636ae082-0  requestGraph-nodes-0-62d8ce657455c83a-0  requestGraph-nodes-0-bda6a020f8478c0c-0  requestGraph-nodes-0-db250251df50bc05-0  snapshot-3a539945636ae082.txt  snapshot-bda6a020f8478c0c.txt
alembic/: env.py
alembic/versions/: ce828b7f1423_added_account_table.py
apps/api/: .gitignore  Dockerfile  gpt.txt  main.py  pyproject.toml  requirements.txt
apps/api/controller/orm_utils/: db_connection.py  orm.py
apps/api/controller/router/: boosters_router.py  users_router.py
apps/api/controller/service/: boosters_methods.py  users_methods.py
apps/api/tests/: test_hello.py  test_login_endpoint.py  test_resgister_endpoint.py
apps/desktop/: README.md  components.json  index.html  main.py  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
apps/frontend/: .gitignore  Dockerfile  README.md  components.json  index.html  (+5 more)
nexus/: .env.example  Makefile  docker-compose.yml  package-lock.json  package.json
(+182 files in other folders)
